deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medibook
  namespace: mb
  labels:
    app: Healthcare
spec:
  replicas: 2
  selector:
    matchLabels:
      app: Healthcare
  template:
    metadata:
      labels:
        app: Healthcare
    spec:
      containers:
        - name: c1
          image: bsainiharika/medibook:v1
          livenessProbe:
            httpGet:
               path: /api/health
               port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          ports:
            - containerPort: 5000
          resources:
            requests:
               cpu: "100m"
               memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
