service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mb-service
  namespace: mb
spec:
  selector:
    app: Healthcare
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32000
