ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mb-ingress
  namespace: mb
spec:
  ingressClassName: nginx
  rules:
    - host: medibook.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mb-service
                port:
                  number: 5000
